src/test/deca/context/invalid/SansObjet/DeclVar-NE-float-int-int.deca
// Description:
//    Declaration of a float variable using != operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    int y = 17; 
    float z = 20 != 17; 
}
